nldl_derive/tests/ui/serializable/multiple-associated-values-fails.stderr
error: proc-macro derive panicked
 --> tests/ui/serializable/multiple-associated-values-fails.rs:3:10
  |
3 | #[derive(NetlinkAttributeSerializable)]
  |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Failed to parse enum variants in NetlinkAttributeSerializable derive: Variant "Flags" contains more than one associated value.
